[package]
name = "screencapturekit-sys"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Low-level bindings to Apple's ScreenCaptureKit"
categories = [
  "api-bindings",
  "multimedia",
  "multimedia::video",
  "os::macos-apis",
]

[dependencies]
